--- a/index.html
+++ b/index.html
@@ -36,22 +36,21 @@
   <body>
     <div id="app"></div>
     <script src="http://elm-in-action.com/pasta.js"></script>
-    <script src="elm.js"></script>
-    <!-- <script>
-            var app = Elm.PhotoGroove.init({node: document.getElementById("app"), flags: Pasta.version});
-
-            app.ports.setFilters.subscribe(function(options) {
-              requestAnimationFrame(function() {
-                Pasta.apply(document.getElementById("main-canvas"), options);
-              });
-            });
-
-            Pasta.addActivityListener(function(activity) {
-              app.ports.activityChanges.send(activity);
-            });
-    </script> -->
+    <script src="/app.js"></script>
     <script>
-        var app = Elm.PhotoFolders.init({node: document.getElementById("app")});
-    </script>
+      var app = Elm.Main.init({
+        flags: Pasta.version,
+        node: document.getElementById("app")});
+
+        app.ports.setFilters.subscribe(function(options) {
+          requestAnimationFrame(function() {
+            Pasta.apply(document.getElementById("main-canvas"), options);
+          });
+        });
+
+        Pasta.addActivityListener(function(activity) {
+          app.ports.activityChanges.send(activity);
+        });
+  </script>
   </body>
 </html>
